--- a/inventory/src/main/resources/application.properties
+++ b/inventory/src/main/resources/application.properties
@@ -4,4 +4,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ms_inventory
 spring.datasource.username=uncledave
 spring.datasource.password=Code123
 
-server.port=8083
+#server.port=8083
+server.port=0
+
+spring.application.name=inventory-service
+# Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
