--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.username=uncledave
 spring.datasource.password=Code123
 
 server.port=8082
+#server.port=0
+
+spring.application.name=orders-service
+# Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
