--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -35,6 +35,6 @@ spring.cloud.gateway.routes[4].id=discovery-server-static-resource
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
-
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/ims-microservices-realm
 
 
