--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -11,3 +11,28 @@ spring.application.name=orders-service
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+#Actuator
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+#Resilience4j
+resilience4j.circuitbreaker.instances.inventory-service.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.inventory-service.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowType=count_based
+resilience4j.circuitbreaker.instances.inventory-service.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.inventory-service.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.inventory-service.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.inventory-service.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.inventory-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+#Resilience4j TimeLimiter
+resilience4j.timelimiter.instances.inventory-service.timeoutDuration=3s
+
+#Resilience4j Retry
+resilience4j.retry.instances.inventory-service.maxAttempts=3
+resilience4j.retry.instances.inventory-service.waitDuration=5s
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
