--- a/products/src/main/resources/application.properties
+++ b/products/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.application.name=products-service
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
