--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -37,8 +37,11 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/ims-microservices-realm
 
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+management.tracing.enabled=true
+logging.pattern.level="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
 
-
+management.endpoints.web.exposure.include=*
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.tracing.sampling.probability=1.0
+logging.pattern.console="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
 
