--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -5,5 +5,11 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 server.port=8761
 
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+#management.tracing.enabled=true
+#logging.pattern.level="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
+#
+#management.endpoints.web.exposure.include=*
+#management.metrics.distribution.percentiles-histogram.http.server.requests=true
+#management.tracing.sampling.probability=1.0
+#logging.pattern.console="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
+#
