--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms_orders
-spring.datasource.username=uncledave
-spring.datasource.password=Code123
+spring.datasource.username=ims_user
+spring.datasource.password=Test123
 
 #server.port=8082
 server.port=0
@@ -34,5 +34,10 @@ resilience4j.timelimiter.instances.inventory-service.timeoutDuration=3s
 resilience4j.retry.instances.inventory-service.maxAttempts=3
 resilience4j.retry.instances.inventory-service.waitDuration=5s
 
-spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+management.tracing.enabled=true
+logging.pattern.level="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
+
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.tracing.sampling.probability=1.0
+logging.pattern.console="%clr(%d{HH:mm:ss.SSS}){red} %clr(%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]){blue} %clr(:){green} %clr(%m){faint}%n"
+
